Added Get-Direction buttons and changes Readmore button to View Details

--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -201,7 +201,11 @@
                                 <br>
                                 <b>PLOT</b> 199 Bahari Beach.
                             </p>
-                            <a href="" class="btn">Read More</a>
+                            <div class="card-btns">
+                                <a href="" class="btn">View Details</a>
+                                <a href="https://www.google.pl/maps/dir//TAG+City+Harvest+Church,+Dar+es+Salaam/@-6.6525454,39.1552698,13z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x185c56d87bbebbcd:0xc7de11771fe2e7b!2m2!1d39.1964697!2d-6.6526324?entry=ttu"
+                                    target="_blank" class="btn direction">Get Directions</a>
+                            </div>
                         </div>
                         <div class="campus-text">
                             <span>DSM</span>
@@ -220,7 +224,11 @@
                                 <br>
                                 <b>PLOT</b> 243 Gezaulole.
                             </p>
-                            <a href="" class="btn">Read More</a>
+                            <div class="card-btns">
+                                <a href="" class="btn">View Details</a>
+                                <a href="https://www.google.pl/maps/dir//TAG+City+Harvest+Church,+Kigamboni,+4CF6%2BWMQ,+Dar+es+Salaam/@-6.8750786,39.3705436,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x185db5e07cd845b7:0x9d739b0eb0371519!2m2!1d39.4117435!2d-6.8751656?entry=ttu"
+                                    target="_blank" class="btn direction">Get Directions</a>
+                            </div>
                         </div>
                         <div class="campus-text">
                             <span>DSM</span>
@@ -239,7 +247,11 @@
                                 <br>
                                 <b>PLOT</b> 458 Iyumbu.
                             </p>
-                            <a href="" class="btn">Read More</a>
+                            <div class="card-btns">
+                                <a href="" class="btn">View Details</a>
+                                <a href="https://www.google.pl/maps/dir//City+Harvest+Church+Dodoma,+Dodoma/@-6.1795814,35.7956972,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x184de3723c58f063:0xcf8154744895078f!2m2!1d35.8368971!2d-6.1796683?entry=ttu"
+                                    target="_blank" class="btn direction">Get Directions</a>
+                            </div>
                         </div>
                         <div class="campus-text">
                             <span>DODOMA</span>
@@ -261,7 +273,10 @@
                                 <br>
                                 <b>PLOT</b> 387 Ilemela.
                             </p>
-                            <a href="" class="btn">Read More</a>
+                            <div class="card-btns">
+                                <a href="" class="btn">View Details</a>
+                                <a href="" class="btn direction">Get Directions</a>
+                            </div>
                         </div>
                         <div class="campus-text">
                             <span>MWANZA</span>
@@ -280,7 +295,10 @@
                                 <br>
                                 <b>PLOT</b> 453 Bengaluru.
                             </p>
-                            <a href="" class="btn">Read More</a>
+                            <div class="card-btns">
+                                <a href="" class="btn">View Details</a>
+                                <a href="" class="btn direction">Get Directions</a>
+                            </div>
                         </div>
                         <div class="campus-text">
                             <span>INDIA</span>
@@ -419,10 +437,12 @@
                             rel="noopener noreferrer">
                             <i class="fab fa-youtube"></i>
                         </a>
-                        <a href="https://www.facebook.com/cityharvestchurchdar" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.facebook.com/cityharvestchurchdar" target="_blank"
+                            rel="noopener noreferrer">
                             <i class="fab fa-facebook"></i>
                         </a>
-                        <a href="https://www.instagram.com/cityharvestchurchdar/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.instagram.com/cityharvestchurchdar/" target="_blank"
+                            rel="noopener noreferrer">
                             <i class="fab fa-instagram"></i>
                         </a>
                         <a href="https://twitter.com/cityharvestdar" target="_blank" rel="noopener noreferrer">
