--- a/cityharvest/app/ch_dodoma.html
+++ b/cityharvest/app/ch_dodoma.html
@@ -20,7 +20,7 @@
     <!-- === Title === -->
     <title>City Harvest Church | Contact</title>
     <!-- === CSS === -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/contact.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/ch_dodoma.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/footer.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/utilities.css">
@@ -45,7 +45,7 @@
                 <li class="nav-item"><a href="" class="nav-link change-Color">Get Involved</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Publication</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
-                <li class="nav-item"><a href="#home" class="nav-link active">Contact</a></li>
+                <li class="nav-item"><a href="contact.html" class="nav-link change-Color">Contact</a></li>
             </ul>
             <div class="flex-space-between login-give">
                 <a href="#" class="btn btn-outline-primary login">Login</a>
@@ -61,7 +61,7 @@
             <div class="container">
                 <div class="row">
                     <div class="hero-txt">
-                        <h2>Contact Us</h2>
+                        <h2>Dodoma</h2>
                         <div class="social">
                             <a href="https://www.youtube.com/@CityHarvestChurchDar" target="_blank"
                                 rel="noopener noreferrer">
@@ -87,7 +87,7 @@
         <!-- == Contact-info == -->
         <section id="contact-info">
             <div class="container">
-                <h1 class="contact-info-title" data-aos="fade-right" data-aos-delay="100">Get In Touch</h1>
+                <h1 class="contact-info-title" data-aos="fade-right" data-aos-delay="100">Contact</h1>
                 <div class="even-columns">
                     <div class="card p-3" data-aos="fade-right" data-aos-delay="100">
                         <div class="left-our">
@@ -110,69 +110,18 @@
                             <h1 class="head-our">OUR</h1>
                         </div>
                         <div class="inner-txt">
-                            <h2>Website</h2>
-                            <p>
-                                www.cityharvestdar.or.tz
-                            </p>
-                        </div>
-                        <i class="fas fa-globe"></i>
-                    </div>
-                </div>
-                <div class="even-columns">
-                    <div class="card p-3" data-aos="fade-right" data-aos-delay="100">
-                        <div class="left-our">
-                            <h1 class="head-our">OUR</h1>
-                        </div>
-                        <div class="inner-txt">
-                            <h2>Email</h2>
-                            <p>
-                                cityharvestdar@yahoo.com
-                            </p>
-                        </div>
-                        <i class="fas fa-envelope"></i>
-                    </div>
-                    <div class="card p-3" data-aos="fade-left" data-aos-delay="100">
-                        <div class="left-our">
-                            <h1 class="head-our">OUR</h1>
-                        </div>
-                        <div class="inner-txt">
                             <h2>Phone</h2>
                             <p>
-                                +255 654 340 122
+                                +255 759 704 960
+                                <br>
+                                +255 689 638 266
+                                <br>
+                                +255 715 988 819
                             </p>
                         </div>
                         <i class="fas fa-phone"></i>
                     </div>
                 </div>
-            </div>
-        </section>
-
-        <!-- == Contact-Form == -->
-        <section id="contact-form-wrapper">
-            <div class="container">
-                <h1 class="heading-txt" data-aos="fade-left" data-aos-delay="100">Leave a Message</h1>
-                <p class="heading-para">
-                    Please fill in the field below and we will respond
-                    as soon as possible.
-                </p>
-                <div class="even-columns">
-                    <div class="contact-form" data-aos="fade-left" data-aos-delay="100">
-                        <form action="#">
-                            <div class="inputs-text-box">
-                                <input type="text" name="fulname" id="fulname" placeholder="Name" required>
-                                <input type="text" name="email" id="email" placeholder="Email" required>
-                            </div>
-                            <!-- <div class="inputs-text-box"> -->
-                            <!-- <input type="tel" name="text" id="tel" placeholder="Phone" required> -->
-                            <input type="text" name="subject" id="fname" placeholder="Subject" required>
-                            <!-- </div> -->
-                            <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Message"
-                                required></textarea>
-                            <input type="submit" value="Send Message" class="send">
-                        </form>
-                    </div>
-                </div>
-            </div>
         </section>
 
         <!-- == weekly-services == -->
@@ -249,7 +198,7 @@
         <!-- == Locatiokn | Map === -->
         <section class="map">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15851.815731606217!2d39.1964697!3d-6.6526324!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c56d87bbebbcd%3A0xc7de11771fe2e7b!2sTAG%20City%20Harvest%20Church!5e0!3m2!1sen!2stz!4v1693526359062!5m2!1sen!2stz"
+                src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d253864.60069084004!2d35.53202649453125!3d-6.179668300000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sCity%20Harvest%20Church%20Dodoma!5e0!3m2!1sen!2stz!4v1693599048362!5m2!1sen!2stz"
                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </section>
