--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -202,7 +202,7 @@
                                 <b>PLOT</b> 199 Bahari Beach.
                             </p>
                             <div class="card-btns">
-                                <a href="" class="btn">View Details</a>
+                                <a href="app/contact.html" class="btn">View Details</a>
                                 <a href="https://www.google.pl/maps/dir//TAG+City+Harvest+Church,+Dar+es+Salaam/@-6.6525454,39.1552698,13z/data=!3m1!4b1!4m8!4m7!1m0!1m5!1m1!1s0x185c56d87bbebbcd:0xc7de11771fe2e7b!2m2!1d39.1964697!2d-6.6526324?entry=ttu"
                                     target="_blank" class="btn direction">Get Directions</a>
                             </div>
@@ -248,7 +248,7 @@
                                 <b>PLOT</b> 458 Iyumbu.
                             </p>
                             <div class="card-btns">
-                                <a href="" class="btn">View Details</a>
+                                <a href="app/ch_dodoma.html" class="btn">View Details</a>
                                 <a href="https://www.google.pl/maps/dir//City+Harvest+Church+Dodoma,+Dodoma/@-6.1795814,35.7956972,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x184de3723c58f063:0xcf8154744895078f!2m2!1d35.8368971!2d-6.1796683?entry=ttu"
                                     target="_blank" class="btn direction">Get Directions</a>
                             </div>
@@ -334,7 +334,7 @@
         <!-- == weekly-services == -->
         <section id="weekly-services">
             <div class="container">
-                <h1 class="weekly-services-title" data-aos="fade-right" data-aos-delay="100">WEEKLY GATHERINGS</h1>
+                <h1 class="weekly-services-title" data-aos="fade-right" data-aos-delay="100">WEEKLY SERVICES</h1>
                 <div class="even-columns">
                     <div class="card bg-white" data-aos="flip-up" data-aos-delay="100">
                         <div class="card-body">
