--- a/cityharvest/app/ch_dodoma.html
+++ b/cityharvest/app/ch_dodoma.html
@@ -71,7 +71,7 @@
                                 rel="noopener noreferrer">
                                 <i class="fab fa-facebook"></i>
                             </a>
-                            <a href="https://www.instagram.com/cityharvestchurchdar/" target="_blank"
+                            <a href="https://www.instagram.com/cityharvestdodoma" target="_blank"
                                 rel="noopener noreferrer">
                                 <i class="fab fa-instagram"></i>
                             </a>
@@ -96,11 +96,9 @@
                         <div class="inner-txt">
                             <h2>Location</h2>
                             <p>
-                                Kunduchi Road, City Harvest Street,
+                                Iyumbu Road, Watumishi Housing Street.
                                 <br>
-                                <b>PLOT</b> 199 Bahari Beach,
-                                <br>
-                                P.O.BOX 38125 Dar es Salaam.
+                                <b>PLOT</b> 458 Iyumbu.
                             </p>
                         </div>
                         <i class="fas fa-map-marker-alt"></i>
@@ -113,8 +111,6 @@
                             <h2>Phone</h2>
                             <p>
                                 +255 759 704 960
-                                <br>
-                                +255 689 638 266
                                 <br>
                                 +255 715 988 819
                             </p>
@@ -198,8 +194,8 @@
         <!-- == Locatiokn | Map === -->
         <section class="map">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d253864.60069084004!2d35.53202649453125!3d-6.179668300000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sCity%20Harvest%20Church%20Dodoma!5e0!3m2!1sen!2stz!4v1693599048362!5m2!1sen!2stz"
-                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253864.60069084004!2d35.53202649453125!3d-6.179668300000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x184de3723c58f063%3A0xcf8154744895078f!2sCity%20Harvest%20Church%20Dodoma!5e0!3m2!1sen!2stz!4v1693603027244!5m2!1sen!2stz"
+                loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </section>
     </main>
@@ -244,7 +240,7 @@
                             rel="noopener noreferrer">
                             <i class="fab fa-facebook"></i>
                         </a>
-                        <a href="https://www.instagram.com/cityharvestchurchdar/" target="_blank"
+                        <a href="https://www.instagram.com/cityharvestchurchdar" target="_blank"
                             rel="noopener noreferrer">
                             <i class="fab fa-instagram"></i>
                         </a>
