--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -197,7 +197,7 @@
                         <div class="card-body">
                             <h2>Bahari Beach</h2>
                             <p>
-                                Kunduchi Road, City Harvest Street
+                                Kunduchi Road, City Harvest Street.
                                 <br>
                                 <b>PLOT</b> 199 Bahari Beach.
                             </p>
@@ -220,12 +220,12 @@
                         <div class="card-body">
                             <h2>KIGAMBONI</h2>
                             <p>
-                                Kimbiji Road, Bamba Street,
+                                Kimbiji Road, Bamba Street.
                                 <br>
-                                <b>PLOT</b> 243 Gezaulole.
+                                <b>PLOT</b> 2117 Gezaulole.
                             </p>
                             <div class="card-btns">
-                                <a href="" class="btn">View Details</a>
+                                <a href="app/ch_kigamboni.html" class="btn">View Details</a>
                                 <a href="https://www.google.pl/maps/dir//TAG+City+Harvest+Church,+Kigamboni,+4CF6%2BWMQ,+Dar+es+Salaam/@-6.8750786,39.3705436,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x185db5e07cd845b7:0x9d739b0eb0371519!2m2!1d39.4117435!2d-6.8751656?entry=ttu"
                                     target="_blank" class="btn direction">Get Directions</a>
                             </div>
@@ -243,7 +243,7 @@
                         <div class="card-body">
                             <h2>DODOMA</h2>
                             <p>
-                                Iyumbu Road, CH Street
+                                Iyumbu Road, Watumishi Street.
                                 <br>
                                 <b>PLOT</b> 458 Iyumbu.
                             </p>
@@ -269,7 +269,7 @@
                         <div class="card-body">
                             <h2>Rock City Mall</h2>
                             <p>
-                                Makongoro Road, Bondeni Street
+                                Makongoro Road, Bondeni Street.
                                 <br>
                                 <b>PLOT</b> 387 Ilemela.
                             </p>
@@ -292,7 +292,7 @@
                         <div class="card-body">
                             <h2>BANGALORE</h2>
                             <p>
-                                Hennur-Bagalur Road, Kothanur Street
+                                Hennur-Bagalur Road, Kothanur Street.
                                 <br>
                                 <b>PLOT</b> 453 Bengaluru.
                             </p>
@@ -443,7 +443,7 @@
                             rel="noopener noreferrer">
                             <i class="fab fa-facebook"></i>
                         </a>
-                        <a href="https://www.instagram.com/cityharvestchurchdar/" target="_blank"
+                        <a href="https://www.instagram.com/cityharvestchurchdar" target="_blank"
                             rel="noopener noreferrer">
                             <i class="fab fa-instagram"></i>
                         </a>
