--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -274,7 +274,7 @@
                                 <b>PLOT</b> 387 Ilemela.
                             </p>
                             <div class="card-btns">
-                                <a href="" class="btn">View Details</a>
+                                <a href="app/ch_mwanza.html" class="btn">View Details</a>
                                 <a href="https://www.google.pl/maps/dir//Rock+city+mall,+Mwanza/@-6.7780228,39.2189697,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x185c4db2660de561:0x1d3a5d62d5b3eb67!2m2!1d39.2601696!2d-6.7781098?entry=ttu"
                                     target="_blank" class="btn direction">Get Directions</a>
                             </div>
@@ -297,7 +297,7 @@
                                 <b>PLOT</b> 453 Bengaluru.
                             </p>
                             <div class="card-btns">
-                                <a href="" class="btn">View Details</a>
+                                <a href="app/ch_india.html" class="btn">View Details</a>
                                 <a href="https://www.google.pl/maps/dir//Hennur+Bagalur+Rd,+Hennur+Bagalur+Main+Road,+DR+Bendre+Layout,+Kuvempu+Layout,+Kothanur,+Bengaluru,+Karnataka,+India/@13.0725073,77.609832,13z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3bae19f79cb7630d:0x6a64801988f2c220!2m2!1d77.6510319!2d13.072427?entry=ttu"
                                     target="_blank" class="btn direction">Get Directions</a>
                             </div>
