--- a/cityharvest/app/about.html
+++ b/cityharvest/app/about.html
@@ -105,8 +105,8 @@
         </section>
     </main>
 
-    <!-- === Footer === -->
-    <footer id="footer">
+       <!-- === Footer === -->
+       <footer id="footer">
         <div class="container">
             <div class="grid-4">
                 <div class="col">
@@ -115,26 +115,26 @@
                 <div class="col">
                     <h3 class="col-title">QUICK LINKS</h3>
                     <ul class="nav-menu">
-                        <li class="nav-item"><a href="" class="nav-link">About</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Give</a></li>
                         <li class="nav-item"><a href="" class="nav-link">I'm New</a></li>
                         <li class="nav-item"><a href="" class="nav-link">Events</a></li>
                         <li class="nav-item"><a href="" class="nav-link">Get Involved</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
+                        <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col">
                     <h3 class="col-title">LOCATIONS</h3>
                     <ul class="nav-menu">
-                        <li class="nav-item"><a href="" class="nav-link">Bahari Beach</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">Kigamboni</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">Dodoma</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">Rock City Mall</a></li>
-                        <li class="nav-item"><a href="" class="nav-link">Bangalore</a></li>
+                        <li class="nav-item"><a href="contact.html" class="nav-link">Bahari Beach</a></li>
+                        <li class="nav-item"><a href="ch_kigamboni.html" class="nav-link">Kigamboni</a></li>
+                        <li class="nav-item"><a href="ch_dodoma.html" class="nav-link">Dodoma</a></li>
+                        <li class="nav-item"><a href="ch_mwanza.html" class="nav-link">Rock City Mall</a></li>
+                        <li class="nav-item"><a href="ch_india.html" class="nav-link">Bangalore</a></li>
                     </ul>
                 </div>
                 <div class="col">
                     <div class="col-staff">
-                        <a href="http://" target="_blank" rel="noopener noreferrer" class="staff-mail">Staff Mail</a>
+                        <a href="" target="_blank" rel="noopener noreferrer" class="staff-mail">Staff Mail</a>
                     </div>
                     <div class="social">
                         <a href="https://www.youtube.com/@CityHarvestChurchDar" target="_blank"
@@ -170,7 +170,7 @@
         </div>
         <!-- End Go-Top -->
     </footer>
-
+    
     <!-- === Scripts === -->
     <!-- JQuery CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
