sermons page has been added

--- a/cityharvest/app/sermons.html
+++ b/cityharvest/app/sermons.html
@@ -20,7 +20,7 @@
     <!-- === Title === -->
     <title>City Harvest Church | Contact</title>
     <!-- === CSS === -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/ch_dodoma.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/sermons.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/footer.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/utilities.css">
@@ -41,7 +41,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="../index.html" class="nav-link change-Color">Home</a></li>
                 <li class="nav-item"><a href="about.html" class="nav-link change-Color">About</a></li>
-                <li class="nav-item"><a href="sermons.html" class="nav-link change-Color">Sermons</a></li>
+                <li class="nav-item"><a href="" class="nav-link active">Sermons</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Get Involved</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Publication</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
@@ -61,22 +61,11 @@
             <div class="container">
                 <div class="row">
                     <div class="hero-txt">
-                        <h2>Dodoma</h2>
+                        <h2>Sermons</h2>
                         <div class="social">
-                            <a href="https://www.youtube.com/@CityHarvestChurchDar" target="_blank"
+                            <a href="https://www.youtube.com/@CityHarvestChurchDar/streams" target="_blank"
                                 rel="noopener noreferrer">
                                 <i class="fab fa-youtube"></i>
-                            </a>
-                            <a href="https://www.facebook.com/cityharvestchurchdar" target="_blank"
-                                rel="noopener noreferrer">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a href="https://www.instagram.com/cityharvestdodoma" target="_blank"
-                                rel="noopener noreferrer">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="https://twitter.com/cityharvestdar" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-twitter"></i>
                             </a>
                         </div>
                     </div>
@@ -84,40 +73,18 @@
             </div>
         </section>
 
-        <!-- == Contact-info == -->
-        <section id="contact-info">
+        <!-- == Latest Message == -->
+        <section id="latest-message">
             <div class="container">
-                <h1 class="contact-info-title" data-aos="fade-right" data-aos-delay="100">Contact</h1>
-                <div class="even-columns">
-                    <div class="card p-3" data-aos="fade-right" data-aos-delay="100">
-                        <div class="left-our">
-                            <h1 class="head-our">OUR</h1>
-                        </div>
-                        <div class="inner-txt">
-                            <h2>Location</h2>
-                            <p>
-                                Iyumbu Road, Watumishi Housing Street.
-                                <br>
-                                <b>PLOT</b> 458 Iyumbu.
-                            </p>
-                        </div>
-                        <i class="fas fa-map-marker-alt"></i>
-                    </div>
-                    <div class="card p-3" data-aos="fade-left" data-aos-delay="100">
-                        <div class="left-our">
-                            <h1 class="head-our">OUR</h1>
-                        </div>
-                        <div class="inner-txt">
-                            <h2>Phone</h2>
-                            <p>
-                                +255 759 704 960
-                                <br>
-                                +255 715 988 819
-                            </p>
-                        </div>
-                        <i class="fas fa-phone"></i>
+                <h1 class="latest-message-title">Latest Sermons</h1>
+                <div class="row">
+                    <div class="video-wrapper" data-aos="fade-up" data-aos-delay="100">
+                        <iframe frameborder="0"
+                            src="https://www.youtube.com/embed?listType=playlist&list=UUQLLAyIDCHSstiXWt5w2dpQ">
+                        </iframe>
                     </div>
                 </div>
+            </div>
         </section>
 
         <!-- == weekly-services == -->
@@ -191,13 +158,6 @@
             </div>
         </section>
 
-        <!-- == Locatiokn | Map === -->
-        <section class="map">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253864.60069084004!2d35.53202649453125!3d-6.179668300000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x184de3723c58f063%3A0xcf8154744895078f!2sCity%20Harvest%20Church%20Dodoma!5e0!3m2!1sen!2stz!4v1693603027244!5m2!1sen!2stz"
-                loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-        </section>
     </main>
 
     <!-- === Footer === -->
