--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -41,7 +41,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="#home" class="nav-link active">Home</a></li>
                 <li class="nav-item"><a href="app/about.html" class="nav-link change-Color">About</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Sermons</a></li>
+                <li class="nav-item"><a href="app/sermons.html" class="nav-link change-Color">Sermons</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Get Involved</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Publication</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
@@ -309,6 +309,7 @@
                 </div>
             </div>
         </section>
+        
         <!-- == Latest Message == -->
         <section id="latest-message">
             <div class="container">
