--- a/cityharvest/app/about.html
+++ b/cityharvest/app/about.html
@@ -42,7 +42,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
                 <li class="nav-item"><a href="#home" class="nav-link active">About</a></li>
-                <li class="nav-item"><a href="" class="nav-link">Sermons</a></li>
+                <li class="nav-item"><a href="sermons.html" class="nav-link">Sermons</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Get Involved</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Publication</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Ministries</a></li>
