--- a/cityharvest/app/ch_mwanza.html
+++ b/cityharvest/app/ch_mwanza.html
@@ -41,7 +41,7 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="../index.html" class="nav-link change-Color">Home</a></li>
                 <li class="nav-item"><a href="about.html" class="nav-link change-Color">About</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Sermons</a></li>
+                <li class="nav-item"><a href="sermons.html" class="nav-link change-Color">Sermons</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Get Involved</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Publication</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
