Cool pagination has been added to sermons page

--- a/cityharvest/app/sermons.html
+++ b/cityharvest/app/sermons.html
@@ -90,8 +90,8 @@
         <!-- == sermons == -->
         <section id="sermons">
             <div class="container">
-                <div id="video-list" class="even-columns"></div>
-                <div id="pagination"></div>
+                <div id="video-list" class="video-grid"></div>
+                <div id="pagination" class="pagination"></div>
             </div>
         </section>
 
