--- a/cityharvest/app/sermons.html
+++ b/cityharvest/app/sermons.html
@@ -91,6 +91,7 @@
         <section id="sermons">
             <div class="container">
                 <div id="video-list" class="video-grid"></div>
+                <div id="page-number" class="page-number"></div>
                 <div id="pagination" class="pagination"></div>
             </div>
         </section>
@@ -166,8 +167,6 @@
     <!-- === Scripts === -->
     <!-- YouTube Data API JavaScript Library -->
     <script src="https://apis.google.com/js/api.js"></script>
-    <!-- YouTube Player API  -->
-    <script src="https://www.youtube.com/iframe_api"></script>
 
     <!-- JQuery CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
